[gd_scene load_steps=8 format=3 uid="uid://bllt08of6e6sx"]

[ext_resource type="PackedScene" uid="uid://0xf11f6sy6f7" path="res://example_scenes/example_scene_parts/rotato.tscn" id="1_67y5g"]
[ext_resource type="Script" path="res://example_scenes/game_speed.gd" id="1_fur7c"]
[ext_resource type="Script" path="res://addons/gas/gas_label.gd" id="1_m57ba"]
[ext_resource type="FontFile" uid="uid://dqgaor6ji1vft" path="res://font/liberation-fonts-ttf-2.00.1/LiberationMono-Regular.ttf" id="1_p6vqq"]
[ext_resource type="Script" path="res://addons/gas/gas_richtextlabel.gd" id="2_fgovc"]
[ext_resource type="Script" path="res://example_scenes/example_scene_parts/rotato_signal.gd" id="6_pscvx"]

[sub_resource type="LabelSettings" id="LabelSettings_87rc8"]
font = ExtResource("1_p6vqq")
font_size = 28

[node name="GameSpeed" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fur7c")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="AccessibleRichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_fonts/mono_font = ExtResource("1_p6vqq")
bbcode_enabled = true
text = "Godot has an [code]Engine.time_scale[/code] property built in that affects [code]_process[/code], [code]_physics_process[/code], and timers. However, if you want more granular control of what elements of your game are affected by a time scale change, the [code]GASTime[/code] singleton offers several ways of only adjusting the scale for certain nodes. The best strategy for your game will depend on how how many Nodes you want to be affected and how much manual effort you want to put into this. If you don't need this feature, you can disable it by unchecking the [code]Use Gastime[/code] setting in the Project Settings."
fit_content = true
script = ExtResource("2_fgovc")
accessible_text = "Godot has an [code]Engine.time_scale[/code] property built in that affects [code]_process[/code], [code]_physics_process[/code], and timers. However, if you want more granular control of what elements of your game are affected by a time scale change, the [code]GASTime[/code] singleton offers several ways of only adjusting the scale for certain nodes. The best strategy for your game will depend on how how many Nodes you want to be affected and how much manual effort you want to put into this. If you don't need this feature, you can disable it by unchecking the [code]Use Gastime[/code] setting in the Project Settings."

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Rotato" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer" instance=ExtResource("1_67y5g")]
layout_mode = 2

[node name="AccessibleLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Engine.time_scale"
label_settings = SubResource("LabelSettings_87rc8")
horizontal_alignment = 1
script = ExtResource("1_m57ba")

[node name="AccessibleLabel2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Affects all nodes and timers. Built into Godot, so there is no performance impact."
autowrap_mode = 3
script = ExtResource("1_m57ba")

[node name="TimeScale2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Set to 2.0"

[node name="TimeScale1" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Set to 1.0"

[node name="TimeScaleHalf" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Set to 0.5"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Rotato" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/CenterContainer" groups=["GASTime"] instance=ExtResource("1_67y5g")]
layout_mode = 2

[node name="AccessibleLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "GASTime.set_group_time_scale"
label_settings = SubResource("LabelSettings_87rc8")
horizontal_alignment = 1
script = ExtResource("1_m57ba")

[node name="AccessibleLabel2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Only uses time scale for nodes belonging to the \"GASTime\" group. Good for a few nodes, bad when you get into the 100-1000+ range."
autowrap_mode = 3
script = ExtResource("1_m57ba")

[node name="GroupTimeScale2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Set to 2.0"

[node name="GroupTimeScale1" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Set to 1.0"

[node name="GroupTimeScaleHalf" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Set to 0.5"

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Rotato" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/CenterContainer" groups=["GASTime"] instance=ExtResource("1_67y5g")]
layout_mode = 2
script = ExtResource("6_pscvx")

[node name="AccessibleLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "GASConfig.signal_time_scale"
label_settings = SubResource("LabelSettings_87rc8")
horizontal_alignment = 1
script = ExtResource("1_m57ba")

[node name="AccessibleRichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_fonts/mono_font = ExtResource("1_p6vqq")
bbcode_enabled = true
text = "Requires connecting nodes to the [code]GASTime.process[/code] and [code]physics_process[/code] signals and not using the standard process methods. Scales well with large node counts."
fit_content = true
script = ExtResource("2_fgovc")
accessible_text = "Requires connecting nodes to the [code]GASTime.process[/code] and [code]physics_process[/code] signals and not using the standard process methods. Scales well with large node counts."

[node name="SignalTimeScale2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Set to 2.0"

[node name="SignalTimeScale1" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Set to 1.0"

[node name="SignalTimeScaleHalf" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Set to 0.5"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/TimeScale2" to="." method="_on_time_scale_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/TimeScale1" to="." method="_on_time_scale_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/TimeScaleHalf" to="." method="_on_time_scale_half_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/GroupTimeScale2" to="." method="_on_group_time_scale_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/GroupTimeScale1" to="." method="_on_group_time_scale_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/GroupTimeScaleHalf" to="." method="_on_group_time_scale_half_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/SignalTimeScale2" to="." method="_on_signal_time_scale_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/SignalTimeScale1" to="." method="_on_signal_time_scale_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/SignalTimeScaleHalf" to="." method="_on_signal_time_scale_half_pressed"]
